# routes/courseRouter.go
@@ -10,8 +10,8 @@ import (
 
 func CourseRoutes(router *gin.RouterGroup, db *sql.DB) {
 	router.GET("/", controllers.GetCourses(db))
-	router.GET("/:courseId", controllers.GetCourse(db))
+	router.GET("/:id", controllers.GetCourse(db))
 	router.POST("/", middleware.AuthMiddleware(), controllers.CreateCourse(db))
-	router.PUT("/:courseId", middleware.AuthMiddleware(), controllers.UpdateCourse(db))
-	router.DELETE("/:courseId", middleware.AuthMiddleware(), controllers.DeleteCourse(db))
+	router.PUT("/:id", middleware.AuthMiddleware(), controllers.UpdateCourse(db))
+	router.DELETE("/:id", middleware.AuthMiddleware(), controllers.DeleteCourse(db))
 }
