# routes/documentRouter.go
@@ -12,6 +12,6 @@ func DocumentRoutes(router *gin.RouterGroup, db *sql.DB) {
 	router.GET("/", controllers.GetDocuments(db))
 	router.GET("/subjects", controllers.GetListClassesWithSubjects(db))
 	router.POST("/", middleware.AuthMiddleware(), controllers.CreateDocument(db))
-	router.PUT("/:documentId", middleware.AuthMiddleware(), controllers.UpdateDocument(db))
-	router.DELETE("/:documentId", middleware.AuthMiddleware(), controllers.DeleteDocument(db))
+	router.PUT("/:id", middleware.AuthMiddleware(), controllers.UpdateDocument(db))
+	router.DELETE("/:id", middleware.AuthMiddleware(), controllers.DeleteDocument(db))
 }
