# routes/userRouter.go
@@ -12,9 +12,9 @@ func UserRoutes(router *gin.RouterGroup, db *sql.DB) {
 	router.POST("/", controllers.CreateUser(db))
 	router.POST("/admin", middleware.AuthMiddleware(), controllers.CreateUserAdmin(db))
 	router.GET("/", middleware.AuthMiddleware(), controllers.GetUsers(db))
-	router.GET("/:userId", middleware.AuthMiddleware(), controllers.GetUserByID(db))
-	router.PUT("/:userId", middleware.AuthMiddleware(), controllers.UpdateUser(db))
-	router.PUT("/:userId/password", middleware.AuthMiddleware(), controllers.UpdateUserPassword(db))
-	router.PUT("/:userId/avatar", middleware.AuthMiddleware(), controllers.UpdateUserAvatar(db))
-	router.DELETE("/:userId", middleware.AuthMiddleware(), controllers.DeleteUser(db))
+	router.GET("/:id", middleware.AuthMiddleware(), controllers.GetUserByID(db))
+	router.PUT("/:id", middleware.AuthMiddleware(), controllers.UpdateUser(db))
+	router.PUT("/:id/password", middleware.AuthMiddleware(), controllers.UpdateUserPassword(db))
+	router.PUT("/:id/avatar", middleware.AuthMiddleware(), controllers.UpdateUserAvatar(db))
+	router.DELETE("/:id", middleware.AuthMiddleware(), controllers.DeleteUser(db))
 }
